--- a/src/Hyper/AdsBundle/Resources/views/Payments/canceledPayment.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Payments/canceledPayment.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base.html.twig" %}
 {% block title %}
-{{ 'canceled.payment'|babylon }}
+{{ 'canceled.payment'|babel }}
 {% endblock %}
 {% block body %}
-{{ 'payment.was.canceled'|babylon }}
+{{ 'payment.was.canceled'|babel }}
 {% endblock %}
