--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payments.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payments.html.twig
@@ -1,20 +1,20 @@
 {% extends "::base.html.twig" %}
 {% block title %}
-{{ 'payments.for.announcement'|babylon({'%announcement%': announcement.title}) }}
+{{ 'payments.for.announcement'|babel({'%announcement%': announcement.title}) }}
 {% endblock %}
 {% block body %}
-<h2>{{ 'payments.for.announcement'|babylon({'%announcement%': announcement.title}) }}</h2>
+<h2>{{ 'payments.for.announcement'|babel({'%announcement%': announcement.title}) }}</h2>
 
 {% if announcement.orders|length > 0 %}
     <table class="records-list">
         <thead>
         <tr>
-            <th>{{ 'order.number'|babylon }}</th>
-            <th>{{ 'date.submission'|babylon }}</th>
-            <th>{{ 'pay.to'|babylon }}</th>
-            <th>{{ 'amount'|babylon }}</th>
-            <th>{{ 'is.paid'|babylon }}</th>
-            <th>{{ 'zone'|babylon }}</th>
+            <th>{{ 'order.number'|babel }}</th>
+            <th>{{ 'date.submission'|babel }}</th>
+            <th>{{ 'pay.to'|babel }}</th>
+            <th>{{ 'amount'|babel }}</th>
+            <th>{{ 'is.paid'|babel }}</th>
+            <th>{{ 'zone'|babel }}</th>
         </tr>
         </thead>
         <tbody>
@@ -25,7 +25,7 @@
                 {% if order.paymentInstruction %}
                     {{ order.paymentInstruction.createdAt|date('d. m. Y') }}r.
                 {% else %}
-                    {{ 'payment.instruction.not.found'|babylon }}
+                    {{ 'payment.instruction.not.found'|babel }}
                 {% endif %}
             </td>
             <td>{{ order.paymentTo|date('d. m. Y') }}r.</td>
@@ -33,16 +33,16 @@
                 {% if order.paymentInstruction %}
                     {{ order.amount }} {{ order.paymentInstruction.currency }}
                 {% else %}
-                    {{ 'payment.instruction.not.found'|babylon }}
+                    {{ 'payment.instruction.not.found'|babel }}
                 {% endif %}
             </td>
             <td>
                 {% if order.status == constant('Hyper\\AdsBundle\\Entity\\Order::STATUS_FINISHED') %}
-                    {{ 'yes'|babylon }}
+                    {{ 'yes'|babel }}
                 {% elseif order.status == constant('Hyper\\AdsBundle\\Entity\\Order::STATUS_CANCELLED') %}
-                    {{ 'cancelled'|babylon }}
+                    {{ 'cancelled'|babel }}
                 {% else %}
-                    {{ 'no'|babylon }} <a class="external" href="{{ order.paymentUrl }}">{{ 'pay'|babylon }}</a>
+                    {{ 'no'|babel }} <a class="external" href="{{ order.paymentUrl }}">{{ 'pay'|babel }}</a>
                 {% endif %}
             </td>
             <td>
@@ -53,7 +53,7 @@
         </tbody>
     </table>
 {% else %}
-    <div class="notice message">{{ 'payments.empty'|babylon }}</div>
+    <div class="notice message">{{ 'payments.empty'|babel }}</div>
 {% endif %}
 
 {% endblock %}
