--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/show.html.twig
@@ -1,30 +1,30 @@
 {% extends "::base.html.twig" %}
 {% block body %}
 {% block title %}
-{{ 'show.advertiser'|babylon({'advertiserName': entity.username}) }}
+{{ 'show.advertiser'|babel({'advertiserName': entity.username}) }}
 {% endblock %}
-<h1>{{ 'show.advertiser'|babylon({'advertiserName': entity.username}) }}</h1>
+<h1>{{ 'show.advertiser'|babel({'advertiserName': entity.username}) }}</h1>
 
 <table class="record_properties">
     <tbody>
     <tr>
-        <th>{{ 'id'|babylon }}</th>
+        <th>{{ 'id'|babel }}</th>
         <td>{{ entity.id }}</td>
     </tr>
     <tr>
-        <th>{{ 'name'|babylon }}</th>
+        <th>{{ 'name'|babel }}</th>
         <td>{{ entity.username }}</td>
     </tr>
     <tr>
-        <th>{{ 'email'|babylon }}</th>
+        <th>{{ 'email'|babel }}</th>
         <td>{{ entity.email }}</td>
     </tr>
     <tr>
-        <th>{{ 'firstname'|babylon }}</th>
+        <th>{{ 'firstname'|babel }}</th>
         <td>{{ entity.firstName }}</td>
     </tr>
     <tr>
-        <th>{{ 'lastname'|babylon }}</th>
+        <th>{{ 'lastname'|babel }}</th>
         <td>{{ entity.lastName }}</td>
     </tr>
     </tbody>
@@ -33,18 +33,18 @@
 <ul class="record_actions">
     <li>
         <a href="{{ path('admin_advertiser') }}">
-            {{ 'back.to.the.list'|babylon }}
+            {{ 'back.to.the.list'|babel }}
         </a>
     </li>
     <li>
         <a href="{{ path('admin_advertiser_edit', { 'id': entity.id }) }}">
-            {{ 'edit'|babylon }}
+            {{ 'edit'|babel }}
         </a>
     </li>
     <li>
         <form action="{{ path('admin_advertiser_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">{{ 'delete'|babylon }}</button>
+            <button type="submit">{{ 'delete'|babel }}</button>
         </form>
     </li>
 </ul>
