--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/pay.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/pay.html.twig
@@ -1,11 +1,11 @@
 {% extends "::base.html.twig" %}
 {% block title %}
-{{ 'banner.buy'|babylon }}
+{{ 'banner.buy'|babel }}
 {% endblock %}
 {% block body %}
 <form action="{{ url('user_banner_pay_save', {'banner': banner.id}) }}" method="post">
     {{ form_widget(orderForm) }}
-    <input type="submit" value="{{ 'pay'|babylon }}"/>
+    <input type="submit" value="{{ 'pay'|babel }}"/>
 </form>
 
 {% if zones|length > 0 %}
