enable registration confirm

--- a/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,5 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-<p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
+     <div class="notice">
+        <p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
+     </div>
 {% endblock body %}
