--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/zones.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/zones.html.twig
@@ -54,7 +54,7 @@
         </tbody>
     </table>
     <div class="buttons">
-        <input type="submit" value="{{ 'save'|babel }}"
+        <input type="submit" value="{{ 'save'|babel }}" />
     </div>
     </form>
 {% else %}
