--- a/src/Hyper/AdsBundle/Resources/views/Default/zonesInfo.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/zonesInfo.html.twig
@@ -22,11 +22,11 @@
     </thead>
     <tbody>
     {% for page in pages %}
-    <tr class="first-spanned-row{% if loop.last %} last{% endif %}">
+    <tr class="first-spanned-row{% if loop.last %} last{% endif %}{% if page.zones|length == 1 %} first{% endif %}">
         <th class="spanned-column" rowspan="{{ page.zones|length }}">{{ page.name }}</th>
         {% for zone in page.zones %}
             {% if not loop.first %}
-                <tr{% if loop.last or (loop.length == 1 and loop.first) %} class="last"{% endif %}>
+                <tr{% if loop.last  %} class="last-zone"{% endif %}>
             {% endif %}
             <td>{{ zone.name }}</td>
             <td>{{ zone.maxWidth }} x {{ zone.maxHeight }}</td>
