upgrade of deps and fix 404 in register

--- a/app/Resources/FOSUserBundle/views/Registration/checkEmail.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/checkEmail.html.twig
@@ -1,5 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-    <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
+    <div class="info">
+        <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
+    </div>
 {% endblock body %}
