--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
@@ -27,7 +27,13 @@
 {% raw %}
 <script type="text/html" id="price-tpl">
     Liczba dni do zapłaty: <strong>{{days}}</strong><br/>
-    Koszt: <strong>{{price}} {{currency}}</strong>
+    Koszt: <strong>{{price}} {{currency}}</strong><br />
+    Dni, w których nie można wyśwetlić bannera:
+    <ul class="no-payment-possible">
+        {{#common_days}}
+        <li>Od <strong>{{s}}</strong> do <strong>{{e}}</strong></li>
+        {{/common_days}}
+    </ul>
 </script>
 {% endraw %}
 <script type="text/javascript" src="{{ asset("bundles/hyperads/js/payment.js") }}"></script>
