--- a/app/Resources/FOSUserBundle/views/Registration/checkEmail.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/checkEmail.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
     <div class="info">
-        <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
+        {{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}
     </div>
 {% endblock body %}
