--- a/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/passwordAlreadyRequested.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
      <div class="notice">
-        <p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
+        {{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}
      </div>
 {% endblock body %}
