--- a/app/Resources/FOSUserBundle/views/Resetting/checkEmail.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/checkEmail.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-<p>
+<div class="info">
 {{ 'resetting.check_email'|trans({'%email%': email}, 'FOSUserBundle') }}
-</p>
+</div>
 {% endblock %}
