--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -64,7 +64,10 @@
                         <a href="{{ path('user_banner_list') }}">{{ 'your.banners'|babel }}</a>
                     </li>
                     <li>
-                        <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel|lower }}</a>
+                        <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
+                    </li>
+                    <li>
+                        <a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a>
                     </li>
                 </ul>
             </menu>
