--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,6 +61,9 @@
             <menu class="user">
                 <ul>
                     <li>
+                        <a href="{{ url('acid_tutorial') }}">{{ 'tutorial'|babel }}</a>
+                    </li>
+                    <li>
                         <a href="{{ path('user_banner_list') }}">{{ 'your.banners'|babel }}</a>
                     </li>
                     <li>
