--- a/src/Hyper/AdsBundle/Resources/views/Payments/canceledPayment.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Payments/canceledPayment.html.twig
@@ -3,5 +3,8 @@
 {{ 'canceled.payment'|babel }}
 {% endblock %}
 {% block body %}
-{{ 'payment.was.canceled'|babel }}
+    <h1>{{ 'canceled.payment'|babel }}</h1>
+    <div class="info">
+        {{ 'payment.was.canceled'|babel }}
+    </div>
 {% endblock %}
