--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/add.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/add.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block javascripts %}
-{% if wysiwyg == 'enabled' %}
+{% if wysiwyg is defined and wysiwyg == 'enabled' %}
 <script type="text/javascript" src="{{ asset('components/ckeditor/ckeditor.js') }}"></script>
     <script type="text/javascript">
         ($(document).ready(function() {
